Converted to A&A format.

--- a/references.bib
+++ b/references.bib
@@ -1,13 +1,9 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-
 %% Created for Raphael Gavazzi at 2018-01-28 16:05:10 +0100 
 
-
 %% Saved with string encoding Unicode (UTF-8) 
-
-
 
 @article{2008ApJ...677.1046G,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -220,7 +216,7 @@
 	Bdsk-Url-1 = {+%20http://dx.doi.org/10.1093/mnras/stx1733},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1093/mnras/stx1733}}
 
-@article{2007A&A...461..813C,
+@article{2007AnadA...461..813C,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2007A%26A...461..813C},
 	Author = {{Cabanac}, R.~A. and {Alard}, C. and {Dantel-Fort}, M. and {Fort}, B. and {Gavazzi}, R. and {Gomez}, P. and {Kneib}, J.~P. and {Le F{\`e}vre}, O. and {Mellier}, Y. and {Pello}, R. and {Soucail}, G. and {Sygnet}, J.~F. and {Valls-Gabaud}, D.},
@@ -252,7 +248,7 @@
 	Year = 2012,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/749/1/38}}
 
-@article{2017A&A...597A.135B,
+@article{2017AnadA...597A.135B,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2017A%26A...597A.135B},
 	Archiveprefix = {arXiv},
@@ -507,7 +503,7 @@
 	Year = {1998},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1023/A:1009715923555}}
 
-@article{1996A&AS..117..393B,
+@article{1996AnadAS..117..393B,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/1996A%26AS..117..393B},
 	Author = {{Bertin}, E. and {Arnouts}, S.},
@@ -616,7 +612,7 @@
 	Year = 2011,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1111/j.1365-2966.2010.18114.x}}
 
-@article{2014A&A...566A..63J,
+@article{2014AnadA...566A..63J,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2014A%26A...566A..63J},
 	Archiveprefix = {arXiv},
@@ -634,7 +630,7 @@
 	Year = 2014,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361/201423365}}
 
-@article{2007A&A...472..341S,
+@article{2007AnadA...472..341S,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2007A%26A...472..341S},
 	Author = {{Seidel}, G. and {Bartelmann}, M.},
@@ -665,7 +661,7 @@
 	Year = 2009,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/694/2/924}}
 
-@article{2010A&A...517A..25S,
+@article{2010AnadA...517A..25S,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2010A%26A...517A..25S},
 	Archiveprefix = {arXiv},
@@ -682,7 +678,7 @@
 	Year = 2010,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361/200913977}}
 
-@article{2016A&A...592A..75P,
+@article{2016AnadA...592A..75P,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2016A%26A...592A..75P},
 	Archiveprefix = {arXiv},
@@ -836,14 +832,13 @@ recurrent neural networks.},
 @article{1979Natur.279..381W,
 	Adsnote = {Provided by the NASA Astrophysics Data System},
 	Author = {{Walsh}, D. and {Carswell}, R. F. and {Weymann}, R. J.},
-	Journal = {\nat},
+	Journal = {Natur.},
 	Month = may,
 	Pages = {381--384},
 	Title = {0957 + 561 A, B - Twin quasistellar objects or gravitational lens},
-	Url = {http://adsabs.harvard.edu/cgi-bin/nph-bib_query?bibcode=1979Natur.279..381W&db_key=AST},
 	Volume = 279,
-	Year = 1979,
-	Bdsk-Url-1 = {http://adsabs.harvard.edu/cgi-bin/nph-bib_query?bibcode=1979Natur.279..381W&db_key=AST}}
+	Year = 1979
+	}
 
 @article{2016MNRAS.455.1171M,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -1278,7 +1273,7 @@ recurrent neural networks.},
 	Year = 2013,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/766/2/70}}
 
-@article{1992ARA&A..30..311B,
+@article{1992ARAnadA..30..311B,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/1992ARA%26A..30..311B},
 	Author = {{Blandford}, R.~D. and {Narayan}, R.},
@@ -1334,7 +1329,7 @@ recurrent neural networks.},
 	Year = 1964,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1093/mnras/128.4.307}}
 
-@article{2016A&ARv..24...11T,
+@article{2016AnadARv..24...11T,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2016A%26ARv..24...11T},
 	Archiveprefix = {arXiv},
@@ -1383,7 +1378,7 @@ recurrent neural networks.},
 	Year = 2017,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1093/mnras/stx2064}}
 
-@article{2010A&A...514A..93M,
+@article{2010AnadA...514A..93M,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2010A%26A...514A..93M},
 	Archiveprefix = {arXiv},
@@ -1400,7 +1395,7 @@ recurrent neural networks.},
 	Year = 2010,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361/200913222}}
 
-@article{2008A&A...482..403M,
+@article{2008AnadA...482..403M,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2008A%26A...482..403M},
 	Archiveprefix = {arXiv},
@@ -1644,7 +1639,7 @@ recurrent neural networks.},
 	Year = {2004},
 	Bdsk-Url-1 = {http://stacks.iop.org/0004-637X/606/i=2/a=819}}
 
-@ARTICLE{2001AJ....121..820G,
+@ARTICLE{2001AJ...121..820G,
    author = {{Graham}, A.~W.},
     title = "{An Investigation into the Prominence of Spiral Galaxy Bulges}",
   journal = {\aj},
