--- a/paper.tex
+++ b/paper.tex
@@ -1,13 +1,16 @@
-\documentclass[useAMS,usenatbib]{mnras}
+%\documentclass[useAMS,usenatbib]{mnras}
+%\documentclass[useAMS,usenatbib]{aa}
+\documentclass{aa}
 
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{amsmath}
 \usepackage{amssymb}
-\usepackage{cite}
+%\usepackage{cite}
 \usepackage{natbib}
 \usepackage{xcolor}
 \usepackage{import}
+\usepackage[varg]{txfonts}
 
 \def\aap{Astronomy \& Astrophysics}
 \def\apj{The Astrophysical Journal}
@@ -28,146 +31,181 @@
 \newcommand{\degree}{^{\circ}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{etoolbox}
-\makeatletter
-\newcount\c@additionalboxlevel
-\setcounter{additionalboxlevel}{0}
-\newcount\c@maxboxlevel
-\setcounter{maxboxlevel}{1}
-\patchcmd\@combinedblfloats{\box\@outputbox}{%
-  \stepcounter{additionalboxlevel}%
-  \box\@outputbox
-}{}{\errmessage{\noexpand\@combinedblfloats could not be patched}}
-
-\AtBeginShipout{%
-  \ifnum\value{additionalboxlevel}>\value{maxboxlevel}%
-    \typeout{Warning: maxboxlevel might be too small, increase to %
-      \the\value{additionalboxlevel}%
-    }%
-  \fi 
-  \@whilenum\value{additionalboxlevel}<\value{maxboxlevel}\do{%
-    \typeout{* Additional boxing of page `\thepage'}%
-    \setbox\AtBeginShipoutBox=\hbox{\copy\AtBeginShipoutBox}%
-    \stepcounter{additionalboxlevel}%
-  }%
-  \setcounter{additionalboxlevel}{0}%
-}
-\makeatother
+%\usepackage{etoolbox}
+%\makeatletter
+%\newcount\c@additionalboxlevel
+%\setcounter{additionalboxlevel}{0}
+%\newcount\c@maxboxlevel
+%\setcounter{maxboxlevel}{1}
+%\patchcmd\@combinedblfloats{\box\@outputbox}{%
+%  \stepcounter{additionalboxlevel}%
+%  \box\@outputbox
+%}{}{\errmessage{\noexpand\@combinedblfloats could not be patched}}
+%
+%\AtBeginShipout{%
+%  \ifnum\value{additionalboxlevel}>\value{maxboxlevel}%
+%    \typeout{Warning: maxboxlevel might be too small, increase to %
+%      \the\value{additionalboxlevel}%
+%    }%
+%  \fi 
+%  \@whilenum\value{additionalboxlevel}<\value{maxboxlevel}\do{%
+%    \typeout{* Additional boxing of page `\thepage'}%
+%    \setbox\AtBeginShipoutBox=\hbox{\copy\AtBeginShipoutBox}%
+%    \stepcounter{additionalboxlevel}%
+%  }%
+%  \setcounter{additionalboxlevel}{0}%
+%}
+%\makeatother
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%% TITLE PAGE %%%%%%%%%%%%%%%%%%%
-
-
-\title[SL Challenge]{The Strong Gravitational  Lens Finding Challenge}
-%C.~E.~Petrillo$^{1}$,  C.~Tortora$^{1}$, L.~V.~E.~Koopmans$^{1}$, \and G.~Verdoes~Kleijn$^{1}$
-\author[R. B. Metcalf {\it et al.}]{
-R. Benton Metcalf,$^{1,4}$\thanks{E-mail: robertbenton.metcalf@unibo.it} 
-M. Meneghetti,$^4$ 
-Camille Avestruz,$^{11,12,13,\dagger}$
-\newauthor
-Fabio Bellagamba,$^1$
-Cl\'ecio R. Bom,$^{17,18}$
-Emmanuel Bertin,$^3$ 
-\newauthor
-R\'emi Cabanac,$^2$ 
-Etienne Decenci\`ere,$^{10}$
-R\'emi Flamary,$^8$
-\newauthor
-Raphael Gavazzi,$^{3}$ 
-Mario Geiger,$^6$ 
-Philippa Hartley,$^7$
-\newauthor
-Marc Huertas-Company,$^9$
-Neal Jackson,$^7$ 
-Eric Jullo,$^{16}$
-\newauthor
-Jean-Paul Kneib,$^6$
-L\'{e}on V. E. Koopmans,$^{21}$
-\newauthor
-Fran\c{c}ois Lanusse,$^{19}$ 
-Chun-Liang Li,$^{20}$
-Quanbin Ma,$^{20}$ 
-\newauthor
-Martin Makler,$^{18}$
-Nan Li,$^{14}$
-Matthew Lightman,$^{15}$
-\newauthor
-Carlo Enrico Petrillo,$^{21}$
-Christoph Sch\"{a}fer,$^6$ 
-Alessandro Sonnenfeld,$^5$ 
-\newauthor
-Amit Tagore,$^7$
-Crescenzo Tortora,$^{21}$
-Diego Tuccillo,$^{9,10}$
-\newauthor
-Manuel B. Valent\'in,$^{18}$
-Santiago Velasco-Forero,$^{10}$
-Gijs A. Verdoes Kleijn,$^{21}$
-\newauthor
-and Georgios Vernardos$^{21}$
-\\
-% List of institutions
-$^{1}$ Departimento di Fisica \& Astronomia, Universit\`a di Bologna, via Gabetti 93/2, 4012 Bologna, Italy \\
-$^{2}$ IRAP, Universit\'e de Toulouse, CNRS, UPS, Toulouse, France.\\
-$^{3}$ Institut d'Astrophysique de Paris, Sorbonne Universit\'e, CNRS,  UMR 7095, 98 bis bd Arago, 75014 Paris, France.\\
-$^{4}$ INAF-Osservatorio Astronomico di Bologna, via Ranzani 1, 40127 Bologna, Italy \\
-$^{5}$ Kavli IPMU (WPI), UTIAS, The University of Tokyo, Kashiwa, Chiba 277-8583, Japan\\
-$^{6}$ Institute of Physics, Laboratory of Astrophysics, Ecole Polytechnique F\'ed\'erale de Lausanne (EPFL), \\ Observatoire de Sauverny, 1290 Versoix, Switzerland \\
-$^{7}$ Jodrell Bank Centre for Astrophysics, School of Physics \& Astronomy, University of \\ Manchester, Oxford Rd, Manchester M13 9PL, UK \\
-$^{8}$ Laboratoire Lagrange, Universi\'{e} de Nice Sophia-Antipolis, Centre National de la Recherche Scientifique,\\ Observatoire de la C\^{o}te d'Azur, Parc Valrose, 06108 Nice, France \\
-$^{9}$ LERMA, Observatoire de Paris, CNRS, Universit\'e Paris Diderot, 61, Avenue de l'Observatoire F-75014, Paris, France \\
-$^{10}$ MINES Paristech, PSL Research University, Centre for Mathematical Morphology, 35 rue \\ Saint-Honore, Fontainebleau, France \\
-$^{11}${Enrico Fermi Institute, The University of Chicago, Chicago, IL 60637 U.S.A.}\\
-$^{12}${Kavli Institute for Cosmological Physics, The University of Chicago, Chicago, IL 60637 U.S.A.}\\
-$^{13}${Department of Astronomy \& Astrophysics, The University of Chicago, Chicago, IL 60637 U.S.A.}\\
-$^{14}${School of Physics and Astronomy, Nottingham University, University Park, Nottingham, NG7 2RD, UK
-}\\
-$^{15}${JPMorgan Chase, Chicago, IL 60603 U.S.A.}\\
-$^{16}$Aix Marseille Universit\'e, CNRS, LAM (Laboratoire d'Astrophysique de Marseille) UMR 7326, 13388, Marseille, France \\
-$^{17}${Centro Federal de Educa\c{c}\~ao Tecnol\'ogica Celso Suckow da Fonseca, CEP 23810-000,  Itagua\'i, RJ, Brazil}\\
-$^{18}${Centro Brasileiro de Pesquisas F\'isicas, CEP 22290-180, Rio de Janeiro, RJ, Brazil}\\
-$^{19}${McWilliams Center for Cosmology, Department of Physics, Carnegie Mellon University, Pittsburgh, PA 15213, USA}\\
-$^{20}${School of Computer Science, Carnegie Mellon University, Pittsburgh, PA 15213, USA}\\
-$^{21}${Kapteyn Astronomical Institute, University of Groningen, Postbus 800, 9700 AV, Groningen, The Netherlands}\\
-$^\dagger${Provost's Postdoctoral Scholar at the University of Chicago}\\
-}
-
-
 \begin{document}
 
-\date{Accepted . Received ; in original form }
+\title{The Strong Gravitational  Lens Finding Challenge}
 
-\maketitle
+\author{
+R. Benton Metcalf \inst{1,2}\thanks{E-mail: robertbenton.metcalf@unibo.it} 
+\and
+M. Meneghetti \inst{2}
+\and
+Camille Avestruz \inst{3,4,5}\fnmsep\thanks{Provost's Postdoctoral Scholar at the University of Chicago}
+\and
+Fabio Bellagamba\inst{1}
+\and
+Cl\'ecio R. Bom\inst{6,7}
+\and
+Emmanuel Bertin\inst{8}
+\and
+R\'emi Cabanac \inst{9}
+\and
+Etienne Decenci\`ere \inst{10}
+\and
+R\'emi Flamary \inst{11}
+\and
+Raphael Gavazzi \inst{8}
+\and
+Mario Geiger \inst{12} 
+\and
+Philippa Hartley \inst{13}
+\and
+Marc Huertas-Company \inst{14}
+\and
+Neal Jackson \inst{13}
+\and
+Eric Jullo \inst{15}
+\and
+Jean-Paul Kneib \inst{12}
+\and
+L\'{e}on V. E. Koopmans \inst{16}
+\and
+Fran\c{c}ois Lanusse \inst{17}
+\and
+Chun-Liang Li \inst{18}
+\and
+Quanbin Ma \inst{18}
+\and
+Martin Makler \inst{7}
+\and
+Nan Li \inst{19}
+\and
+Matthew Lightman \inst{15}
+\and
+Carlo Enrico Petrillo \inst{16}
+\and
+Christoph Sch\"{a}fer \inst{12}
+\and
+Alessandro Sonnenfeld \inst{21}
+\and
+Amit Tagore \inst{13}
+\and
+Crescenzo Tortora \inst{16}
+\and
+Diego Tuccillo \inst{10,14}
+\and
+Manuel B. Valent\'in \inst{7}
+\and
+Santiago Velasco-Forero \inst{10}
+\and
+Gijs A. Verdoes Kleijn \inst{16}
+\and
+Georgios Vernardos \inst{16}
+}
 
-\label{firstpage}
+\institute{
+Departimento di Fisica \& Astronomia, Universit\`a di Bologna, via Gabetti 93/2, 4012 Bologna, Italy 
+\and
+INAF-Osservatorio Astronomico di Bologna, via Ranzani 1, 40127 Bologna, Italy 
+\and
+Enrico Fermi Institute, The University of Chicago, Chicago, IL 60637 U.S.A.
+\and
+Kavli Institute for Cosmological Physics, The University of Chicago, Chicago, IL 60637 U.S.A.
+\and
+Department of Astronomy \& Astrophysics, The University of Chicago, Chicago, IL 60637 U.S.A.
+\and
+Centro Federal de Educa\c{c}\~ao Tecnol\'ogica Celso Suckow da Fonseca, CEP 23810-000,  Itagua\'i, RJ, Brazil
+\and
+Centro Brasileiro de Pesquisas F\'isicas, CEP 22290-180, Rio de Janeiro, RJ, Brazil
+\and
+Institut d'Astrophysique de Paris, Sorbonne Universit\'e, CNRS,  UMR 7095, 98 bis bd Arago, 75014 Paris, France.
+\and
+IRAP, Universit\'e de Toulouse, CNRS, UPS, Toulouse, France.
+\and
+MINES Paristech, PSL Research University, Centre for Mathematical Morphology, 35 rue  Saint-Honore, Fontainebleau, France
+\and
+Laboratoire Lagrange, Universi\'{e} de Nice Sophia-Antipolis, Centre National de la Recherche Scientifique,
+\and
+Institute of Physics, Laboratory of Astrophysics, Ecole Polytechnique F\'ed\'erale de Lausanne (EPFL),  Observatoire de Sauverny, 1290 Versoix, Switzerland 
+\and
+Jodrell Bank Centre for Astrophysics, School of Physics \& Astronomy, University of  Manchester, Oxford Rd, Manchester M13 9PL, UK Observatoire de la C\^{o}te d'Azur, Parc Valrose, 06108 Nice, France 
+\and
+LERMA, Observatoire de Paris, CNRS, Universit\'e Paris Diderot, 61, Avenue de l'Observatoire F-75014, Paris, France
+\and
+Aix Marseille Universit\'e, CNRS, LAM (Laboratoire d'Astrophysique de Marseille) UMR 7326, 13388, Marseille, France
+\and
+Kapteyn Astronomical Institute, University of Groningen, Postbus 800, 9700 AV, Groningen, The Netherlands
+\and
+McWilliams Center for Cosmology, Department of Physics, Carnegie Mellon University, Pittsburgh, PA 15213, USA
+\and
+School of Computer Science, Carnegie Mellon University, Pittsburgh, PA 15213, USA
+\and
+School of Physics and Astronomy, Nottingham University, University Park, Nottingham, NG7 2RD, UK
+\and
+JPMorgan Chase, Chicago, IL 60603 U.S.A.
+\and
+Kavli IPMU (WPI), UTIAS, The University of Tokyo, Kashiwa, Chiba 277-8583, Japan
+}
 
-% Abstract of the paper
-\begin{abstract}
+%\date{Accepted . Received ; in original form }
+%\maketitle
+%\label{firstpage}
+
+\abstract{
+%\begin{abstract}
 Large scale imaging surveys will increase the number of galaxy-scale strong lensing candidates by maybe three orders of magnitudes beyond the number known today.  Finding these rare objects will require picking them out of at least tens of millions of images and deriving scientific results from them will require quantifying the efficiency and bias of any search method.  To achieve these objectives automated methods must be developed.
 Because gravitational lenses are rare objects reducing false positives will be particularly important.  We present a description and results of an open gravitational lens finding challenge.  Participants were asked to classify 100,000 candidate objects as to whether they were gravitational lenses or not with the goal of developing better automated methods for finding lenses in large data sets.   A variety of methods were used including visual inspection, arc and ring finders, support vector machines (SVM) and convolutional neural networks (CNN).  We find that many of the methods will be easily fast enough to analyse the anticipated data flow.  In test data, several methods are able to identify upwards of half the lenses after applying some thresholds on the lens characteristics such as lensed image brightness, size or contrast with the lens galaxy without making a single false-positive identification.  This is significantly better than direct inspection by humans was able to do.  Having multi-band, ground based data is found to be better for this purpose than single-band space based data with lower noise and higher resolution, suggesting that colours bring a crucial additional information.
 The most difficult challenge for a lens finder is differentiating between rare irregular and ring-like face-on galaxies and true gravitational lenses.  The degree to which the efficiency and biases of lens finders can be quantified largely depends on the realism of the simulated data on which the finders are trained.
-\end{abstract}
+}%\end{abstract}
 
-\begin{keywords}
-gravitational lensing -- cosmology 
-\end{keywords}
+\keywords{gravitational lensing -- cosmology }
 
+\maketitle
 
 \section{Introduction}
 \label{sec:introduction}
 
-Strong gravitational lenses are rare cases where a distant galaxy or quasar is aligned so closely with a foreground galaxy or cluster of galaxies  that the gravitational field of the foreground object creates multiple, highly distorted images of the background object.  These take the form of multiple images of a quasar and Einstein rings surrounding a galaxy and of highly distorted arcs seen through galaxy groups and clusters.  The first strong lens was discovered in 1979 \citep{1979Natur.279..381W} and since then many valuable scientific uses have been found for them.  They have been used to study how dark matter is distributed in galaxies and clusters \citep[e.g.][]{1991ApJ...373..354K,2001ApJ...554.1216C,2002ApJ...568L...5K,2003ApJ...587..143R,2003ApJ...583..606K,2005MNRAS.360.1333W,2005ApJ...623...31D,2009MNRAS.392..945V,2016MNRAS.463.3115T}.  They have been used to measure the Hubble constant and other cosmological parameters \citep[e.g.][]{1964MNRAS.128..307R,1992ARA&A..30..311B,2000ApJ...544...98W,2013ApJ...766...70S,2016A&ARv..24...11T}.
+Strong gravitational lenses are rare cases where a distant galaxy or quasar is aligned so closely with a foreground galaxy or cluster of galaxies  that the gravitational field of the foreground object creates multiple, highly distorted images of the background object.  These take the form of multiple images of a quasar and Einstein rings surrounding a galaxy and of highly distorted arcs seen through galaxy groups and clusters.  The first strong lens was discovered in 1979 \citet{1979Natur.279..381W} and since then many valuable scientific uses have been found for them.  They have been used to study how dark matter is distributed in galaxies and clusters \citep[e.g.][]{1991ApJ...373..354K,2001ApJ...554.1216C,2002ApJ...568L...5K,2003ApJ...587..143R,2003ApJ...583..606K,2005MNRAS.360.1333W,2005ApJ...623...31D,2009MNRAS.392..945V,2016MNRAS.463.3115T}.  They have been used to measure the Hubble constant and other cosmological parameters 
+\citep[e.g.][]{1964MNRAS.128..307R,1992ARAandA..30..311B,2000ApJ...544...98W,2013ApJ...766...70S,2016AandARv..24...11T}.  
 Their magnification has been used as a natural telescope to observe otherwise undetectable objects \citep[e.g][]{2007ApJ...671.1196M,2017MNRAS.464.4823B,2016ApJ...833..264S}.   They have put limits on the self interaction of dark matter and on the theory of gravitation \citep{0004-637X-606-2-819}.  Through microlensing they have been used to study the structure of quasars \citep{2008ApJ...689..755M,2008ApJ...673...34P,2011ApJ...729...34B}.   To access this wealth of information the first step is to find the lenses.
 
 The Square Kilometer Array (SKA)\footnote{http://skatelescope.org/}, the Large Synoptic Survey Telescope (LSST)\footnote{https://www.lsst.org/} and the Euclid space telescope\footnote{https://www.euclid-ec.org/} are expected to increase the number of potential lenses by orders of magnitude \citep{collett_15,euclidSLWGwhitepaper,2015aska.confE..84M,2010MNRAS.405.2579O}.   For example it is estimated that there will be approximately 200,000 observable galaxy-galaxy lenses in the Euclid data set among tens of billions of potential objects.  So far, less than a thousand lenses have been found in total across many heterogeneous data sets.  These surveys will bring a new era for strong lensing where large relatively well defined samples of lenses will be possible.  It will also require handling much larger quantities of data than has been customary in this field.
 
-Up to this point, the most widely used method for finding lenses in imaging surveys has been by visual inspection of candidates that have been selected on the bases of luminosity and/or colour.  This has been done in the radio \citep{2003MNRAS.341...13B} and in the visible with space and ground based data \citep{2008MNRAS.389.1311J,2008ApJS..176...19F,2010A&A...517A..25S,2014MNRAS.439.3392P}.  A related method pioneered by the SPACE WARPS project \citep{2016MNRAS.455.1171M,2016MNRAS.455.1191M,2015MNRAS.452..502G} has been to crowd source the visual inspection through an online platform.  These efforts have proved very fruitful, but they deal with orders of magnitude fewer candidates and lenses than will be necessary in the future.  Dealing with such large quantities of data will not be practical for any visual inspection approach.  In addition, the efficiency and detection bias of human inspection methods are difficult to rigorously quantify.
+Up to this point, the most widely used method for finding lenses in imaging surveys has been by visual inspection of candidates that have been selected on the bases of luminosity and/or colour.  This has been done in the radio \citep{2003MNRAS.341...13B} and in the visible with space and ground based data \citep{2008MNRAS.389.1311J,2008ApJS..176...19F,2010AandA...517A..25S,2014MNRAS.439.3392P}.  A related method pioneered by the SPACE WARPS project \citep{2016MNRAS.455.1171M,2016MNRAS.455.1191M,2015MNRAS.452..502G} has been to crowd source the visual inspection through an online platform.  These efforts have proved very fruitful, but they deal with orders of magnitude fewer candidates and lenses than will be necessary in the future.  Dealing with such large quantities of data will not be practical for any visual inspection approach.  In addition, the efficiency and detection bias of human inspection methods are difficult to rigorously quantify.
 
 Spectroscopic searches for galaxy scale lenses have also been done by looking for high redshift stellar lines in the spectra of lower redshift large galaxies.  Notably this was done in the Sloan Lens ACS (SLACS) survey, producing a relatively well defined and pure sample of Einstein ring lenses \citep{2006MNRAS.369.1521W,2006ApJ...638..703B,2012ApJ...744...41B,2015MNRAS.449.3441S}.  However, spectroscopy is telescope-time consuming and for the foreseeable future we are not likely to have spectroscopic surveys that cover anywhere near the number of objects as the planned imaging surveys.
 
-Some automated algorithms have been developed in the past to detect lenses in images.  These have been designed to detect arc-like features \citep{2006astro.ph..6757A,2007A&A...472..341S, 2017A&A...597A.135B} and rings \citep{2014ApJ...785..144G,2014A&A...566A..63J}.  They have been applied to survey data and found of order 200 lenses \citep{2007A&A...461..813C,2012ApJ...749...38M,2016A&A...592A..75P}.  Another approach has been to use a lens modeling code to fit a model to all the candidates and pick out the ones that fit the model well \citep{2009ApJ...694..924M,2017arXiv170401585S}.
+Some automated algorithms have been developed in the past to detect lenses in images.  These have been designed to detect arc-like features \citep{2006astro.ph..6757A,2007AandA...472..341S, 2017AandA...597A.135B} and rings \citep{2014ApJ...785..144G,2014AandA...566A..63J}.  They have been applied to survey data and found of order 200 lenses \citep{2007AandA...461..813C,2012ApJ...749...38M,2016AandA...592A..75P}.  Another approach has been to use a lens modeling code to fit a model to all the candidates and pick out the ones that fit the model well \citep{2009ApJ...694..924M,2017arXiv170401585S}.
 
-More recently, machine learning techniques that have become widely used in the fields of computer image processing and artificial intelligence have been applied to this problem and others in astronomy.  In particular, artificial neural networks (ANNs), support vector machines (SVM), and logistic regression.  SVMs and logistic regression methods belong to the family of reproducing kernel Hilbert Space methods. They learn from a training set how to classify objects using features given by predefined kernel functions.  ANNs (and a popular variant convolutional neural networks (CNNs) ) are even more flexible in learn directly from a training set which features are the most important for distinguishing categories of objects.  These have been used widely for such tasks as handwriting and facial recognition.  In astronomy, these families of algorithms are beginning to be used for categorizing galaxy morphologies \citep{2015MNRAS.450.1441D}, photometric redshifts \citep{2017MNRAS.465.1959C,2016PASP..128j4502S,2017NewA...51..169S}, supernova classification \citep{2016ApJS..225...31L} and the lens finding problem \citep{2017MNRAS.471..167J,2017arXiv170207675P,2017MNRAS.465.4325O,2017A&A...597A.135B,hartley2017support}.
+More recently, machine learning techniques that have become widely used in the fields of computer image processing and artificial intelligence have been applied to this problem and others in astronomy.  In particular, artificial neural networks (ANNs), support vector machines (SVM), and logistic regression.  SVMs and logistic regression methods belong to the family of reproducing kernel Hilbert Space methods. They learn from a training set how to classify objects using features given by predefined kernel functions.  ANNs (and a popular variant convolutional neural networks (CNNs) ) are even more flexible in learn directly from a training set which features are the most important for distinguishing categories of objects.  These have been used widely for such tasks as handwriting and facial recognition.  In astronomy, these families of algorithms are beginning to be used for categorizing galaxy morphologies \citep{2015MNRAS.450.1441D}, photometric redshifts \citep{2017MNRAS.465.1959C,2016PASP..128j4502S,2017NewA...51..169S}, supernova classification \citep{2016ApJS..225...31L} and the lens finding problem \citep{2017MNRAS.471..167J,2017arXiv170207675P,2017MNRAS.465.4325O,2017AandA...597A.135B,hartley2017support}.
 
 Given the future of this field with large amounts of data coming soon and many new ideas emerging, it is timely to stage a series of challenges to stimulate new work, determine what can realistically be done in lens finding and get a better idea of the strengths and weaknesses to different methods.  The long term goal is to get a set of algorithms that can handle Euclid, LSST or SKA data sets and produce high purity and high completeness lens samples with well defined efficiency or selection.  We anticipate further challenges in the future in which the realism of the data simulations will become progressively better.  Here we have chosen to concentrate on galaxy/small group scale lenses where the background source is a galaxy because we feel that this is where the most progress can be made and the scientific return is the highest, but QSO lenses and cluster/group lenses challenges may follow.
 
@@ -191,7 +229,7 @@ With GLAMER we identify and map out all the caustics within the light-cone for 3
 
  In the light cone there are many thousands of caustics for the higher source redshifts.  These lenses could be used as is, but we wanted to produce a much larger number with more randomness.   For each caustic we identify the lens plane with the highest convergence and identify all the halos within a three dimensional distance of 0.5 Mpc from the center of the critical curve and on this and its neighboring lens planes.    This collection of halos is then used as the lens and rotated to produce more random lenses.    It  contains all the sub-halos and nearby companion halos, but not the large scale structure surrounding it.
 
-To model the background sources that are lensed we use sources from the Hubble Ultra Deep Field (UDF) that have been decomposed into shapelet functions to remove noise.  This is the same set of images as used in \citet{2008A&A...482..403M,2010A&A...514A..93M,2016arXiv160604548M}.   There are 9,350 such sources with redshifts and separate shapelet coefficients in 4 bands.   
+To model the background sources that are lensed we use sources from the Hubble Ultra Deep Field (UDF) that have been decomposed into shapelet functions to remove noise.  This is the same set of images as used in \citet{2008AandA...482..403M,2010AandA...514A..93M,2016arXiv160604548M}.   There are 9,350 such sources with redshifts and separate shapelet coefficients in 4 bands.   
 
 To construct a mock lens, first a caustic on the highest redshift source plane is selected.  This is done in order of Einstein area, but all the critical curves are used more than once.  Since every lens with a caustic at a lower redshift will have a caustic at the highest redshift this is a selection from all of the caustics in the light-cone.   The lens is extracted as explained above and rotated randomly in three dimensions.  A source is selected at random from the shapelet catalog subject to a magnitude limit in a reference band.   The redshift of the UDF source is used as the source redshift.  If the source is at a lower redshift than the lens or within $\Delta z = 0.4$ another random source is selected.
 
@@ -201,7 +239,7 @@ The visible galaxies associated with the lens must also be simulated. There  are
 \begin{align}
 \log( n_s )= 0.4 \log\left[ {\rm max}\left(\frac{B}{T},0.03\right)\right] + 0.1 x 
 \end{align}
-where $\frac{B}{T}$ is the bulge to total flux ratio and $x$ is a uniform random number between -1 and 1.  This very approximately reproduces the observed correlation between these quantities \citep{2001AJ....121..820G}. 
+where $\frac{B}{T}$ is the bulge to total flux ratio and $x$ is a uniform random number between -1 and 1.  This very approximately reproduces the observed correlation between these quantities \citep{2001AJ...121..820G}. 
 
 In addition to the basic disk and bulge models we introduce some spiral arms.  The surface brightness of 
 the disks are given by
@@ -229,7 +267,7 @@ For the test sets only the final images were provided to participants although a
 \subsection{Space-based}
 \label{sec:sim-space-based}
 
-The space-based datasets were meant to roughly mimic the data quality which is expected from observations by the Euclid telescope in the visible channel. To this end, the pixel size was set to 0.1 arcsec and a Gaussian PSF was applied with a FWHM of 0.18 arcsec. The Gaussian PSF is clearly a simplified model, but a realistic treatment of the PSF is outside the scope of this paper. The reference band for background and foreground galaxies was SDSS $i$, which is overlapping with the broader Euclid VIS band. The realisation of the mock images followed the same procedure described in \citet{2004PASP..116..750G} and \citet{2008A&A...482..403M}. As a result, the noise follows a Gaussian distribution with a realistic width and is uncorrelated between pixels. Characteristics of the instrument, filter and exposure times were taken from the Euclid Red Book \citep{2011arXiv1110.3193L}.
+The space-based datasets were meant to roughly mimic the data quality which is expected from observations by the Euclid telescope in the visible channel. To this end, the pixel size was set to 0.1 arcsec and a Gaussian PSF was applied with a FWHM of 0.18 arcsec. The Gaussian PSF is clearly a simplified model, but a realistic treatment of the PSF is outside the scope of this paper. The reference band for background and foreground galaxies was SDSS $i$, which is overlapping with the broader Euclid VIS band. The realisation of the mock images followed the same procedure described in \citet{2004PASP..116..750G} and \citet{2008AandA...482..403M}. As a result, the noise follows a Gaussian distribution with a realistic width and is uncorrelated between pixels. Characteristics of the instrument, filter and exposure times were taken from the Euclid Red Book \citep{2011arXiv1110.3193L}.
  
  In the challenge set the limiting magnitude for background sources to 28 in $i$.   60\% of the cases had no background source and were thus labeled as non-lenses.
  
@@ -347,7 +385,7 @@ other objects such as spiral arms and edge on spirals using their width, color, 
  \label{fig:Cabanac}
 \end{figure}
 
-Arcfinder \citep{2006astro.ph..6757A,2007A&A...461..813C,2012ApJ...749...38M} illustrated in Figure \ref{fig:Cabanac}, is a fast linear method that computes a pixel wise elongation parameter (ratio of first-order moments in a n-pix window oriented in proper reference frame) for all pixels of mexican-hat-smoothed FITS images. Arcfinder then extracts contiguous pixels above a given background and computes the candidate arc's length, width, area, radius of curvature and peak surface brightness. A final thresholding is set to maximize purity over completeness on a few typical arcs of the dataset.
+Arcfinder \citep{2006astro.ph..6757A,2007AandA...461..813C,2012ApJ...749...38M} illustrated in Figure \ref{fig:Cabanac}, is a fast linear method that computes a pixel wise elongation parameter (ratio of first-order moments in a n-pix window oriented in proper reference frame) for all pixels of mexican-hat-smoothed FITS images. Arcfinder then extracts contiguous pixels above a given background and computes the candidate arc's length, width, area, radius of curvature and peak surface brightness. A final thresholding is set to maximize purity over completeness on a few typical arcs of the dataset.
 For the current SL challenge, arcfinder was tuned to detect long and narrow arcs, and was optimized on a subset of 1000 simulated images with a grid covering a range of elongation windows and arc areas.  A python wrapper allows users to change parameters in a flexible way and run the arcfinder C code as a linux  command line. Arcfinder took a couple of hours to run on the entire dataset with some overheads due to the dataset format. The code is publicly available at https://github.com/rcabanac/arcfinder.
 
 \subsubsection{YattaLens Lite (Sonnenfeld)}
@@ -371,7 +409,7 @@ These are methods that classify the objects by making linear or nonlinear bounda
 
 A Support Vector Machine (SVM) is a supervised machine learning method which uses labeled training data to determine a classification model (see e.g., \citet{vapnik79estimation}, \citet{Cortes1995} and \citet{Burges1998}). A preprocessing stage first extracts a set of useful features from input samples, before projecting each sample as a vector into a high-, possibly infinite-dimensional space. The model then separates classes of data by maximising the margin between a defining hyperplane and a set of so-called support-vectors at the inner edge of each class. The process of classification is computationally inexpensive since the optimisation depends only on the dot products of the support vector subset. Feature extraction, however,  requires both an extensive exploration of the feature space during the development of a model, and potentially intensive computer resources in order to transform the original samples. Our full method is described in detail in \citet{hartley2017support} and was developed using the Python scikit-learn and scikit-image packages \citep{scikit-learn,scikit-image}.
 
-During our development of an SVM classifier for lens finding, feature extraction initially involved the decomposition of each image into a set of objects, using SExtractor \citep{1996A&AS..117..393B} and GALFIT \citep{2002AJ....124..266P} to recover and subtract objects iteratively. This method had previously been used in a static algorithm approach which assigned points according to the morphological properties of each image \citep[see][]{2014A&A...566A..63J}. Lensed-like objects displaying, for example, greater ellipticity and tangentiality were awarded more points. Since the SVM operates in a fixed dimensional space,  properties of individual objects were collapsed into a fixed set describing the mean and variance of morphological properties of all the objects within an image. After training an SVM using these features we recorded a modest separation of lens and non-lens classes.
+During our development of an SVM classifier for lens finding, feature extraction initially involved the decomposition of each image into a set of objects, using SExtractor \citep{1996AandAS..117..393B} and GALFIT \citep{2002AJ...124..266P} to recover and subtract objects iteratively. This method had previously been used in a static algorithm approach which assigned points according to the morphological properties of each image \citep[see][]{2014AandA...566A..63J}. Lensed-like objects displaying, for example, greater ellipticity and tangentiality were awarded more points. Since the SVM operates in a fixed dimensional space,  properties of individual objects were collapsed into a fixed set describing the mean and variance of morphological properties of all the objects within an image. After training an SVM using these features we recorded a modest separation of lens and non-lens classes.
 
 An alternative approach was to design a set of Gabor filters to be applied to each sample. The Gabor kernel is described by a sinusoidal function multiplied by a Gaussian envelope. We discard the imaginary part of the function to leave, in two-dimensional space:
 \begin{equation}
