Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -186,7 +186,7 @@ Because gravitational lenses are rare objects reducing false positives will be p
 The most difficult challenge for a lens finder is differentiating between rare irregular and ring-like face-on galaxies and true gravitational lenses.  The degree to which the efficiency and biases of lens finders can be quantified largely depends on the realism of the simulated data on which the finders are trained.
 }%\end{abstract}
 
-\keywords{gravitational lensing -- cosmology }
+\section{\keywords{gravitational lensing -- cosmology }}
 
 \maketitle
 
