Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -200,7 +200,9 @@ Up to this point, the most widely used method for finding lenses in imaging surv
 
 Spectroscopic searches for galaxy scale lenses have also been done by looking for high redshift stellar lines in the spectra of lower redshift large galaxies.  Notably this was done in the Sloan Lens ACS (SLACS) survey, producing a relatively well defined and pure sample of Einstein ring lenses \citep{2006MNRAS.369.1521W,2006ApJ...638..703B,2012ApJ...744...41B,2015MNRAS.449.3441S}.  However, spectroscopy is telescope-time consuming and for the foreseeable future we are not likely to have spectroscopic surveys that cover anywhere near the number of objects as the planned imaging surveys.
 
-Some automated algorithms have been developed in the past to detect lenses in images.  These have been designed to detect arc-like features \citep{2006astro.ph..6757A,2007AandA...472..341S, 2017AandA...597A.135B} and rings \citep{2014ApJ...785..144G,2014AandA...566A..63J}.  They have been applied to survey data and found of order 200 lenses \citep{2007AandA...461..813C,2012ApJ...749...38M,2016AandA...592A..75P}.  Another approach has been to use a lens modeling code to fit a model to all the candidates and pick out the ones that fit the model well \citep{2009ApJ...694..924M,2017arXiv170401585S}.
+Some automated algorithms have been developed in the past to detect lenses in images.  These have been designed to detect arc-like 
+features \citep{2006astro.ph..6757A,2007AnadA...472..341S, 2017AnadA...597A.135B} and rings 
+\citep{2014ApJ...785..144G,2014AandA...566A..63J}.  They have been applied to survey data and found of order 200 lenses \citep{2007AandA...461..813C,2012ApJ...749...38M,2016AandA...592A..75P}.  Another approach has been to use a lens modeling code to fit a model to all the candidates and pick out the ones that fit the model well \citep{2009ApJ...694..924M,2017arXiv170401585S}.
 
 More recently, machine learning techniques that have become widely used in the fields of computer image processing and artificial intelligence have been applied to this problem and others in astronomy.  In particular, artificial neural networks (ANNs), support vector machines (SVM), and logistic regression.  SVMs and logistic regression methods belong to the family of reproducing kernel Hilbert Space methods. They learn from a training set how to classify objects using features given by predefined kernel functions.  ANNs (and a popular variant convolutional neural networks (CNNs) ) are even more flexible in learn directly from a training set which features are the most important for distinguishing categories of objects.  These have been used widely for such tasks as handwriting and facial recognition.  In astronomy, these families of algorithms are beginning to be used for categorizing galaxy morphologies \citep{2015MNRAS.450.1441D}, photometric redshifts \citep{2017MNRAS.465.1959C,2016PASP..128j4502S,2017NewA...51..169S}, supernova classification \citep{2016ApJS..225...31L} and the lens finding problem \citep{2017MNRAS.471..167J,2017arXiv170207675P,2017MNRAS.465.4325O,2017AandA...597A.135B,hartley2017support}.
 
@@ -659,7 +661,7 @@ A more detailed description of each configuration tested is presented below:
 \item Use of wiener filter and contrast adjustment on each band, then using the resulting images in the same architecture as in (iii). 
 \end{enumerate}
 
-For the ground based cases three configurations with highest area under ROC were III,IV and VI. Although the areas are very similar between IV and VI the last one is superior in the low fake positives end. Thus, for the Strong Lensing Challenge in the ground base sample, we used configuration VI. This final scheme is ilustraded in figure \ref{colorCASTCNN}.
+For the ground based cases three configurations with highest area under ROC were III,IV and VI. Although the areas are very similar between IV and VI the last one is superior in the low fake positives end. Thus, for the Strong Lensing Challenge in the ground base sample, we used configuration VI. This final scheme is illustrated in figure \ref{colorCASTCNN}.
 
 The area under ROC, in both space based configurations were, in general, smaller than in the multi-band case, which suggests how the CNNs are sensitive to color information to find Strong Lensing. Particularly,  ground base configuration II used one CNN per band thus not considering color information and has the similar area under ROC as our best single band configuration. 
 
