--- a/paper.tex
+++ b/paper.tex
@@ -77,6 +77,8 @@ Emmanuel Bertin\inst{8}
 \and
 R\'emi Cabanac \inst{9}
 \and
+Andrew Davies \inst{22}
+\and
 Etienne Decenci\`ere \inst{10}
 \and
 R\'emi Flamary \inst{11}
@@ -110,6 +112,8 @@ Nan Li \inst{19}
 Matthew Lightman \inst{15}
 \and
 Carlo Enrico Petrillo \inst{16}
+\and
+Stephen Serjeant \inst{22}
 \and
 Christoph Sch\"{a}fer \inst{12}
 \and
@@ -172,11 +176,9 @@ School of Physics and Astronomy, Nottingham University, University Park, Notting
 JPMorgan Chase, Chicago, IL 60603 U.S.A.
 \and
 Kavli IPMU (WPI), UTIAS, The University of Tokyo, Kashiwa, Chiba 277-8583, Japan
+\and
+School of Physical Sciences, The Open University, Walton Hall, Milton Keynes, MK7 6AA, UK
 }
-
-%\date{Accepted . Received ; in original form }
-%\maketitle
-%\label{firstpage}
 
 \abstract{
 %\begin{abstract}
