Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -132,6 +132,8 @@ Santiago Velasco-Forero \inst{10}
 Gijs A. Verdoes Kleijn \inst{16}
 \and
 Georgios Vernardos \inst{16}
+\and
+Andrew Davies \inst{22}
 }
 
 \institute{
