Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -753,6 +753,8 @@ The minimization is done via mini-batch stochastic gradient descent with \textit
 The initial values of the biases are set to zero and the weights of each filter are initialized from a random normal distribution with variance ${2/n}$ where $n$ is the number of inputs of the unit \citep{He2015a}.  
 We use L2-norm regularization with $\lambda= 9 \times 10^{-3}$.
 
+\subsubsection{NeuralNet2 (Davies, Serjeant) }
+
 \section{results}
 \label{sec:results}
 
