Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -69,7 +69,7 @@ M. Meneghetti \inst{2}
 \and
 Camille Avestruz \inst{3,4,5}\fnmsep\thanks{Provost's Postdoctoral Scholar at the University of Chicago}
 \and
-Fabio Bellagamba\inst{1}
+Fabio Bellagamba\inst{1,2}
 \and
 Cl\'ecio R. Bom\inst{6,7}
 \and
@@ -135,7 +135,7 @@ Georgios Vernardos \inst{16}
 }
 
 \institute{
-Departimento di Fisica \& Astronomia, Universit\`a di Bologna, via Gabetti 93/2, 4012 Bologna, Italy 
+Dipartimento di Fisica \& Astronomia, Universit\`a di Bologna, via Gobetti 93/2, 40129 Bologna, Italy 
 \and
 INAF-Osservatorio Astronomico di Bologna, via Ranzani 1, 40127 Bologna, Italy 
 \and
