--- a/paper.tex
+++ b/paper.tex
@@ -753,7 +753,7 @@ We use L2-norm regularization with $\lambda= 9 \times 10^{-3}$.
 
 \subsubsection{NeuralNet2 (Davies, Serjeant) }
 
-Our lens finder included wavelet prefiltering. The image was convolved with the Mallat wavelet with a kernel size of 4 in both the horizontal and vertical directions, then combined and compared to the original image to make the final image; $final image = \sqrt[]{H^{2}+V^{2}}$. This prefiltering was performed the emphasise the edges in the images, improving the results from the Convolutional Neural Network (CNN). The CNN had 2 convolution layers each containing 32 $3\times3$ filters, incorporating dropout and max-pooling, and then 3 dense fully-connected layers to classify each image. The network was trained on 18000 of the 20000 training images; training took 15 epochs and was completed once the validation loss was minimised. The training was validated on the remaining 2000 images. Validation loss $\mathcal{L}(\theta)$ was calculated using binary cross entropy
+Our lens finder included wavelet prefiltering. The image was convolved with the Mallat wavelet with a kernel size of 4 in both the horizontal and vertical directions, then combined and compared to the original image to make the final image; $final image = \sqrt[]{H^{2}+V^{2}}$. This prefiltering was performed to emphasise the edges in the images, improving the results from the Convolutional Neural Network (CNN). The CNN had 2 convolution layers each containing 32 $3\times3$ filters, incorporating dropout and max-pooling, and then 3 dense fully-connected layers to classify each image. The network was trained on 18000 of the 20000 training images; training took 15 epochs and was completed once the validation loss was minimised. The training was validated on the remaining 2000 images. Validation loss was calculated using binary cross entropy
 \begin{equation}
 \mathcal{L}(\theta) = \sum_{i=1}^{n} \big[ y_{i}$ $log(p_{i}) + (1 $ - $ y_{i})$ $log(1 $ - $ p_{i}) \big]
 \end{equation} where $\mathcal{L}(\theta)$ is the loss function, $n$ is the number of inputs, $y_{i}$ is the true value of the $i^{th}$ input , and $p_{i}$ is the predicted value for the $i^{th}$ input from the network. A perfect loss of $0$ was generated once every predicted value matched the true value for every input. The network was made and trained in Python 2.7 using the open-source libraries \textsc{theano} and \textsc{keras}\footnote{\href{https://github.com/keras-team/keras}{\tt https://github.com/keras-team/keras}}. A more developed version of our lens finder will appear in Davies, Bromley and Serjeant (in preparation).
