Fixed problems with references.

--- a/references.bib
+++ b/references.bib
@@ -5,6 +5,23 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+
+@ARTICLE{2002AJ....124..266P,
+   author = {{Peng}, C.~Y. and {Ho}, L.~C. and {Impey}, C.~D. and {Rix}, H.-W.
+	},
+    title = "{Detailed Structural Decomposition of Galaxy Images}",
+  journal = {\aj},
+   eprint = {astro-ph/0204182},
+ keywords = {Galaxies: Bulges, Galaxies: Fundamental Parameters, Galaxies: Nuclei, Galaxies: Structure, Techniques: Image Processing, Techniques: Photometric},
+     year = 2002,
+    month = jul,
+   volume = 124,
+    pages = {266-293},
+      doi = {10.1086/340952},
+   adsurl = {http://adsabs.harvard.edu/abs/2002AJ....124..266P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{2008ApJ...677.1046G,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://cdsads.u-strasbg.fr/abs/2008ApJ...677.1046G},
@@ -216,7 +233,7 @@
 	Bdsk-Url-1 = {+%20http://dx.doi.org/10.1093/mnras/stx1733},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1093/mnras/stx1733}}
 
-@article{2007AnadA...461..813C,
+@article{2007AandA...461..813C,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2007A%26A...461..813C},
 	Author = {{Cabanac}, R.~A. and {Alard}, C. and {Dantel-Fort}, M. and {Fort}, B. and {Gavazzi}, R. and {Gomez}, P. and {Kneib}, J.~P. and {Le F{\`e}vre}, O. and {Mellier}, Y. and {Pello}, R. and {Soucail}, G. and {Sygnet}, J.~F. and {Valls-Gabaud}, D.},
@@ -248,7 +265,7 @@
 	Year = 2012,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/749/1/38}}
 
-@article{2017AnadA...597A.135B,
+@article{2017AandA...597A.135B,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2017A%26A...597A.135B},
 	Archiveprefix = {arXiv},
@@ -503,7 +520,7 @@
 	Year = {1998},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1023/A:1009715923555}}
 
-@article{1996AnadAS..117..393B,
+@article{1996AandAS..117..393B,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/1996A%26AS..117..393B},
 	Author = {{Bertin}, E. and {Arnouts}, S.},
@@ -516,21 +533,6 @@
 	Volume = 117,
 	Year = 1996,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1051/aas:1996164}}
-
-@article{2002AJ....124..266P,
-	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-	Adsurl = {http://adsabs.harvard.edu/abs/2002AJ....124..266P},
-	Author = {{Peng}, C.~Y. and {Ho}, L.~C. and {Impey}, C.~D. and {Rix}, H.-W.},
-	Doi = {10.1086/340952},
-	Eprint = {astro-ph/0204182},
-	Journal = {\aj},
-	Keywords = {Galaxies: Bulges, Galaxies: Fundamental Parameters, Galaxies: Nuclei, Galaxies: Structure, Techniques: Image Processing, Techniques: Photometric},
-	Month = jul,
-	Pages = {266-293},
-	Title = {{Detailed Structural Decomposition of Galaxy Images}},
-	Volume = 124,
-	Year = 2002,
-	Bdsk-Url-1 = {http://dx.doi.org/10.1086/340952}}
 
 @book{Feichtinger98a,
 	Annote = {SIGNATUR = 741.019},
@@ -612,7 +614,7 @@
 	Year = 2011,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1111/j.1365-2966.2010.18114.x}}
 
-@article{2014AnadA...566A..63J,
+@article{2014AandA...566A..63J,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2014A%26A...566A..63J},
 	Archiveprefix = {arXiv},
@@ -630,7 +632,7 @@
 	Year = 2014,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361/201423365}}
 
-@article{2007AnadA...472..341S,
+@article{2007AandA...472..341S,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2007A%26A...472..341S},
 	Author = {{Seidel}, G. and {Bartelmann}, M.},
@@ -661,7 +663,7 @@
 	Year = 2009,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/694/2/924}}
 
-@article{2010AnadA...517A..25S,
+@article{2010AandA...517A..25S,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2010A%26A...517A..25S},
 	Archiveprefix = {arXiv},
@@ -678,7 +680,7 @@
 	Year = 2010,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361/200913977}}
 
-@article{2016AnadA...592A..75P,
+@article{2016AandA...592A..75P,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2016A%26A...592A..75P},
 	Archiveprefix = {arXiv},
@@ -1273,7 +1275,7 @@ recurrent neural networks.},
 	Year = 2013,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/766/2/70}}
 
-@article{1992ARAnadA..30..311B,
+@article{1992ARAandA..30..311B,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/1992ARA%26A..30..311B},
 	Author = {{Blandford}, R.~D. and {Narayan}, R.},
@@ -1329,7 +1331,8 @@ recurrent neural networks.},
 	Year = 1964,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1093/mnras/128.4.307}}
 
-@article{2016AnadARv..24...11T,
+
+@article{2016AandARv..24...11T,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2016A%26ARv..24...11T},
 	Archiveprefix = {arXiv},
@@ -1378,7 +1381,7 @@ recurrent neural networks.},
 	Year = 2017,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1093/mnras/stx2064}}
 
-@article{2010AnadA...514A..93M,
+@article{2010AandA...514A..93M,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2010A%26A...514A..93M},
 	Archiveprefix = {arXiv},
@@ -1395,7 +1398,7 @@ recurrent neural networks.},
 	Year = 2010,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361/200913222}}
 
-@article{2008AnadA...482..403M,
+@article{2008AandA...482..403M,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2008A%26A...482..403M},
 	Archiveprefix = {arXiv},
